--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-loading-skeleton": "^2.2.0",
     "react-scripts": "4.0.3",
+    "react-show-more-text": "^1.5.0",
+    "sass": "^1.41.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
