--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-loading-skeleton": "^2.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-show-more-text": "^1.5.0",
     "sass": "^1.41.0",
